style.css
body{

    text-align: center;
    color: black;
    background-color: rgba(236,214,140,255);
    font: century;
}


h1{

    color: black;
    text-decoration: underline;
    max-width: fit-content;
    
}
.mainlinks{
    margin: auto;
    display: block;
}


a {
    font-size: x-large;
    color: black;
    text-align: center;
    display: inline-block
    
}

h2,label,textarea,button,input{
    text-align: center;
    display: block;
    margin-left: auto;
    margin-right: auto;
    height: auto;
    max-width: fit-content;
}

p{
    text-align: center;
    font-size: 1.2em;

}


.crest{
    height: 31.25em;
    max-width: fit-content;
    border-radius: 3.125em;
    margin-left: auto;
    margin-right: auto;
    display: block;
}

.smile{
display: inline-block;
    height: 1.875em;
    width: auto;
    margin-bottom: auto;
}

.usefeeling{
    width: auto;
    height: 12.5em;
}

.home{
    display: inline-block;
    text-align: right;
    position: absolute;
    top: 0; right: 0;
}
.share{
    display: inline-block;
    position: absolute;
    top: 0; left: 0;
    text-align: left;
    text-decoration: none;
    max-width: fit-content;
    height: auto;

}
    

.homepic{
    height: 2em;
    max-width: fit-content;
    width: auto;

}

.contact-input{
    text-align: center;
    height: 1.875em;
    width: 12.5em;
    margin-top: .625em;
    margin-left: auto;
    margin-right: auto;

}

.recipe-input{
    text-align: center;
    height: 25em;
    width: max-content;
    max-width: fit-content;
    margin-top: 1.875em;
    margin-left: auto;
    margin-right: auto;
}

.submit{
    text-align: center;
    margin-top: 3.125em;
    height: 1.875em;
    width: auto;
}

